--- a/relato.html
+++ b/relato.html
@@ -92,6 +92,7 @@
               agora. Toda a interdisciplinaridade tem me inspirado no meu fazer
               pedagógico.
             </p>
+            <br />
 
             <h2>Gabriella de Fátima Dantas do Nascimento Vasconcelos</h2>
             <p class="text-justify">
@@ -114,6 +115,23 @@
               Pude perceber também, o quão significativo e necessário é ouvir a
               criança. Na educação infantil, as crianças também aprendem muito
               com suas experiências.
+            </p>
+            <br />
+
+            <h2>Marina Clara Alves de Macêdo</h2>
+            <p class="text-justify">
+              Comecei no curso de Pedagogia por causa das diversas crianças que
+              moram perto da minha casa e que sempre me pediam ajuda com
+              atividades escolares. Apesar de passar algumas dificuldades para
+              assistir as aulas, na matéria de Educação Infantil I, pude abrir
+              minha mente para as tantas ramificações que existem dentro do
+              mundo que é a Educação Infantil, o quanto é importante cada ponto
+              abordado, os modelos educacionais que foram criados, os diversos
+              desafios e obstáculos que esse mundo passou. Aprendi sobre a
+              importância da infância como base e do quanto as crianças dependem
+              das orientações e dos cuidados que recebem por parte dos adultos,
+              na família e na escola. Espero levar esses ensinamentos para se
+              tornar sempre uma pedagoga melhor.
             </p>
             <br />
 
